@@ -6,11 +6,13 @@ import com.springboot.blog.payload.PostDto;
 import com.springboot.blog.repository.PostRepository;
 import com.springboot.blog.service.PostService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class PostServiceImpl implements PostService {
@@ -26,30 +28,42 @@ public class PostServiceImpl implements PostService {
     @Override
     public PostDto createPost(PostDto postRequestDto) {
 
-        // convert DTO to Entity
+        // convert DTO o Entity
         Post post = mapDtoToEntity(postRequestDto);
         // save the post in DB
         Post newPost = postRepository.save(post);
         // convert Entity to DTO
-        PostDto postResponseDto = mapEntityToDto(newPost);
-        return postResponseDto;
+        return mapEntityToDto(newPost);
     }
 
     @Override
-    public List<PostDto> getAllPosts() {
-        List<Post> allPosts = postRepository.findAll();
-        return allPosts.stream().map(this::mapEntityToDto).collect(Collectors.toList());
+    public List<PostDto> createPosts(List<PostDto> postRequestDtoList) {
+        // convert DTO o Entity
+        List<Post> posts = postRequestDtoList.stream().map(this::mapDtoToEntity).toList();
+        List<Post> newPosts = postRepository.saveAll(posts);
+        return newPosts.stream().map(this::mapEntityToDto).toList();
+    }
+
+
+    @Override
+    public List<PostDto> getAllPosts(int pageNo, int pageSize) {
+        // create pageable instance
+        Pageable pageable = PageRequest.of(pageNo, pageSize);
+        Page<Post> posts = postRepository.findAll(pageable);
+        // get content for page object
+        List<Post> allPosts = posts.getContent();
+        return allPosts.stream().map(this::mapEntityToDto).toList();
     }
 
     @Override
-    public PostDto getPostById(Long id) {
-        Post post = postRepository.findById(id).orElseThrow(()-> new ResourceNotFoundException("Post","Id",id));
+    public PostDto getPostById(long id) {
+        Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "Id", id));
         return mapEntityToDto(post);
     }
 
     @Override
-    public PostDto updatePost(PostDto postRequestDto, Long id) {
-        Post post = postRepository.findById(id).orElseThrow(()-> new ResourceNotFoundException("Post","Id",id));
+    public PostDto updatePost(PostDto postRequestDto, long id) {
+        Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "Id", id));
 
         // convert DTO to Entity
         Post newPost = mapDtoToEntity(postRequestDto);
@@ -63,8 +77,8 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public void deletePost(Long id) {
-        Post post = postRepository.findById(id).orElseThrow(()-> new ResourceNotFoundException("Post","Id",id));
+    public void deletePost(long id) {
+        Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "Id", id));
         postRepository.delete(post);
     }
 
@@ -79,7 +93,7 @@ public class PostServiceImpl implements PostService {
     }
 
     // convert Entity to DTO function
-    private PostDto mapEntityToDto(Post newPost){
+    private PostDto mapEntityToDto(Post newPost) {
         return new PostDto(
                 newPost.getId(),
                 newPost.getTitle(),
